--- a/tones.html
+++ b/tones.html
@@ -242,7 +242,7 @@ function init()
 <h2><a href="https://armful.github.io/diapason.png" target="_blank">Diapason.PNG</a></h2>
 
     <ul>
-		<li>  E3 - 220㎐ - стихия огонь</li>
+		<li>  A3 - 220㎐ - стихия огонь</li>
 		<li>  G3 - 195㎐ - стихия металл</li>
 		<li>  E3 - 164㎐ - стихия дерево</li>
 		<li>  D3 - 146㎐ - стихия почва</li>
